force-app/main/default/objects/ISP__c/ISP__c.object-meta.xml
<CustomObject>
    <label>ISP</label>
    <nameField>
        <label>ISP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ISPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>