force-app/main/default/objects/ISP__c/fields/Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name__c</fullName>
    <label>Domain Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>