force-app/main/default/objects/ISP__c/fields/Filter_In_Line__c.field-meta.xml
<CustomField>
    <fullName>Filter_In_Line__c</fullName>
    <label>Filter In-Line</label>
    <length>2</length>
    <type>Text</type>
</CustomField>