force-app/main/default/objects/ISP__c/fields/Frontiernet_Lookout__c.field-meta.xml
<CustomField>
    <fullName>Frontiernet_Lookout__c</fullName>
    <label>Frontiernet Lookout</label>
    <length>20</length>
    <type>Text</type>
</CustomField>