force-app/main/default/objects/ISP__c/fields/Full_Install_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Full_Install_Y_N__c</fullName>
    <label>Full Install Y/N</label>
    <length>1</length>
    <type>Text</type>
</CustomField>