force-app/main/default/objects/ISP__c/fields/LAN_Network__c.field-meta.xml
<CustomField>
    <fullName>LAN_Network__c</fullName>
    <label>LAN Network</label>
    <length>20</length>
    <type>Text</type>
</CustomField>