force-app/main/default/objects/ISP__c/fields/Modem_Type__c.field-meta.xml
<CustomField>
    <fullName>Modem_Type__c</fullName>
    <label>Modem Type</label>
    <length>6</length>
    <type>Text</type>
</CustomField>