force-app/main/default/objects/ISP__c/fields/Modem_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Modem_Vendor__c</fullName>
    <label>Modem Vendor</label>
    <length>3</length>
    <type>Text</type>
</CustomField>