force-app/main/default/objects/ISP__c/fields/Network_Size__c.field-meta.xml
<CustomField>
    <fullName>Network_Size__c</fullName>
    <label>Network Size</label>
    <length>3</length>
    <type>Text</type>
</CustomField>