force-app/main/default/objects/ISP__c/fields/OPS_System__c.field-meta.xml
<CustomField>
    <fullName>OPS_System__c</fullName>
    <label>OPS System</label>
    <length>20</length>
    <type>Text</type>
</CustomField>