force-app/main/default/objects/ISP__c/fields/Product_Plan__c.field-meta.xml
<CustomField>
    <fullName>Product_Plan__c</fullName>
    <label>Product Plan</label>
    <length>3</length>
    <type>Text</type>
</CustomField>