force-app/main/default/objects/ISP__c/fields/Security_Info__c.field-meta.xml
<CustomField>
    <fullName>Security_Info__c</fullName>
    <label>Security Info</label>
    <length>20</length>
    <type>Text</type>
</CustomField>