force-app/main/default/objects/ISP__c/fields/Security_Type__c.field-meta.xml
<CustomField>
    <fullName>Security_Type__c</fullName>
    <label>Security Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>