force-app/main/default/objects/ISP__c/fields/Splitter_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Splitter_Y_N__c</fullName>
    <label>Splitter Y/N</label>
    <length>1</length>
    <type>Text</type>
</CustomField>