force-app/main/default/objects/ISP__c/fields/Wall_Mount__c.field-meta.xml
<CustomField>
    <fullName>Wall_Mount__c</fullName>
    <label>Wall Mount</label>
    <length>2</length>
    <type>Text</type>
</CustomField>