force-app/main/default/objects/ISP__c/fields/WAN_Static_IP__c.field-meta.xml
<CustomField>
    <fullName>WAN_Static_IP__c</fullName>
    <label>WAN Static IP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>